--- a/LH/index.html
+++ b/LH/index.html
@@ -256,22 +256,22 @@
                         <h3 class="text-2xl font-bold mb-4">APP下载</h3>
                         <p class="mb-4">下载我们的专属APP，享受更便捷的交易体验</p>
                         <div class="space-y-4">
-                            <button class="w-full bg-primary text-white py-3 px-6 rounded-lg hover:bg-blue-600 transition">
+                            <a href="downloads/棱镜社区-iOS版-说明.txt" download class="w-full bg-primary text-white py-3 px-6 rounded-lg hover:bg-blue-600 transition inline-block text-center">
                                 <div class="flex items-center justify-center">
                                     <svg class="w-6 h-6 mr-2" fill="currentColor" viewBox="0 0 24 24">
                                         <path d="M17.05 20.28c-.98.95-2.05.8-3.08.35-1.09-.46-2.09-.48-3.24 0-1.44.62-2.2.44-3.06-.35C2.79 15.25 3.51 7.59 9.05 7.31c1.35.07 2.29.74 3.08.8 1.18-.24 2.31-.93 3.57-.84 1.51.12 2.65.72 3.4 1.8-3.12 1.87-2.38 5.98.48 7.13-.57 1.5-1.31 2.99-2.54 4.09l.01-.01zM12.03 7.25c-.15-2.23 1.66-4.07 3.74-4.25.29 2.58-2.34 4.5-3.74 4.25z"/>
                                     </svg>
                                     iOS 版下载
                                 </div>
-                            </button>
-                            <button class="w-full bg-green-600 text-white py-3 px-6 rounded-lg hover:bg-green-700 transition">
+                            </a>
+                            <a href="downloads/棱镜社区-Android版-说明.txt" download class="w-full bg-green-600 text-white py-3 px-6 rounded-lg hover:bg-green-700 transition inline-block text-center">
                                 <div class="flex items-center justify-center">
                                     <svg class="w-6 h-6 mr-2" fill="currentColor" viewBox="0 0 24 24">
                                         <path d="M3 20.5v-17c0-.41.34-.75.75-.75h16.5c.41 0 .75.34.75.75v17c0 .41-.34.75-.75.75H3.75c-.41 0-.75-.34-.75-.75zm17.25-1V4H4.5v15.5h15.75z"/>
                                     </svg>
                                     Android 版下载
                                 </div>
-                            </button>
+                            </a>
                         </div>
                     </div>
                 </div>
