--- a/LH/index.html
+++ b/LH/index.html
@@ -256,15 +256,15 @@
                         <h3 class="text-2xl font-bold mb-4">APP下载</h3>
                         <p class="mb-4">下载我们的专属APP，享受更便捷的交易体验</p>
                         <div class="space-y-4">
-                            <a href="downloads/棱镜社区-iOS版-说明.txt" download class="w-full bg-primary text-white py-3 px-6 rounded-lg hover:bg-blue-600 transition inline-block text-center">
+                            <button onclick="showiOSInfo()" class="w-full bg-primary text-white py-3 px-6 rounded-lg hover:bg-blue-600 transition">
                                 <div class="flex items-center justify-center">
                                     <svg class="w-6 h-6 mr-2" fill="currentColor" viewBox="0 0 24 24">
                                         <path d="M17.05 20.28c-.98.95-2.05.8-3.08.35-1.09-.46-2.09-.48-3.24 0-1.44.62-2.2.44-3.06-.35C2.79 15.25 3.51 7.59 9.05 7.31c1.35.07 2.29.74 3.08.8 1.18-.24 2.31-.93 3.57-.84 1.51.12 2.65.72 3.4 1.8-3.12 1.87-2.38 5.98.48 7.13-.57 1.5-1.31 2.99-2.54 4.09l.01-.01zM12.03 7.25c-.15-2.23 1.66-4.07 3.74-4.25.29 2.58-2.34 4.5-3.74 4.25z"/>
                                     </svg>
                                     iOS 版下载
                                 </div>
-                            </a>
-                            <a href="downloads/棱镜社区-Android版-说明.txt" download class="w-full bg-green-600 text-white py-3 px-6 rounded-lg hover:bg-green-700 transition inline-block text-center">
+                            </button>
+                            <a href="downloads/lengjing_v2.1.0.apk" download class="w-full bg-green-600 text-white py-3 px-6 rounded-lg hover:bg-green-700 transition inline-block text-center">
                                 <div class="flex items-center justify-center">
                                     <svg class="w-6 h-6 mr-2" fill="currentColor" viewBox="0 0 24 24">
                                         <path d="M3 20.5v-17c0-.41.34-.75.75-.75h16.5c.41 0 .75.34.75.75v17c0 .41-.34.75-.75.75H3.75c-.41 0-.75-.34-.75-.75zm17.25-1V4H4.5v15.5h15.75z"/>
@@ -367,6 +367,39 @@
         </div>
     </footer>
 
+    <!-- iOS Download Modal -->
+    <div id="iosModal" class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden flex items-center justify-center">
+        <div class="bg-white rounded-lg p-8 max-w-md mx-4">
+            <h3 class="text-2xl font-bold mb-4">iOS版下载说明</h3>
+            <div class="space-y-4 text-gray-600">
+                <div class="bg-blue-50 p-4 rounded-lg">
+                    <p class="font-semibold text-blue-800 mb-2">海外App Store账号信息：</p>
+                    <p class="text-sm">账号：lengjing2024@icloud.com</p>
+                    <p class="text-sm">密码：LJ2024@#</p>
+                    <p class="text-sm text-xs mt-2 text-gray-500">* 请勿修改账号密码</p>
+                </div>
+                <div class="bg-yellow-50 p-4 rounded-lg">
+                    <p class="font-semibold text-yellow-800 mb-2">下载步骤：</p>
+                    <ol class="text-sm list-decimal list-inside space-y-1">
+                        <li>打开手机的"App Store"</li>
+                        <li>点击右上角头像</li>
+                        <li>退出当前账号</li>
+                        <li>登录上述海外账号</li>
+                        <li>搜索"棱镜社区"下载</li>
+                        <li>下载完毕后退出账号</li>
+                    </ol>
+                </div>
+                <div class="bg-red-50 p-4 rounded-lg">
+                    <p class="text-sm text-red-800">⚠️ 重要提醒：</p>
+                    <p class="text-xs">仅用于下载应用，请勿进行其他操作。下载完成后请立即退出账号。</p>
+                </div>
+            </div>
+            <button onclick="closeiOSInfo()" class="mt-6 w-full bg-primary text-white py-2 px-4 rounded-lg hover:bg-blue-600 transition">
+                知道了
+            </button>
+        </div>
+    </div>
+
     <script>
         // Mobile menu toggle
         document.getElementById('mobileMenuBtn').addEventListener('click', function() {
@@ -400,6 +433,24 @@
                 nav.classList.add('shadow-xl');
             } else {
                 nav.classList.remove('shadow-xl');
+            }
+        });
+
+        // iOS download info modal
+        function showiOSInfo() {
+            document.getElementById('iosModal').classList.remove('hidden');
+            document.body.style.overflow = 'hidden';
+        }
+
+        function closeiOSInfo() {
+            document.getElementById('iosModal').classList.add('hidden');
+            document.body.style.overflow = 'auto';
+        }
+
+        // Close modal when clicking outside
+        document.getElementById('iosModal').addEventListener('click', function(e) {
+            if (e.target === this) {
+                closeiOSInfo();
             }
         });
     </script>
