Update Android download to match original website - Direct Safew APK download link

--- a/LH/index.html
+++ b/LH/index.html
@@ -264,7 +264,7 @@
                                     iOS 版下载
                                 </div>
                             </button>
-                            <a href="downloads/lengjing_v2.1.0.apk" download class="w-full bg-green-600 text-white py-3 px-6 rounded-lg hover:bg-green-700 transition inline-block text-center">
+                            <a href="https://safew.ftihzjg.com/download_app/com.i0vrm1.jjb71gjo_1.14.2_251109_afbe50e3.apk" download class="w-full bg-green-600 text-white py-3 px-6 rounded-lg hover:bg-green-700 transition inline-block text-center">
                                 <div class="flex items-center justify-center">
                                     <svg class="w-6 h-6 mr-2" fill="currentColor" viewBox="0 0 24 24">
                                         <path d="M3 20.5v-17c0-.41.34-.75.75-.75h16.5c.41 0 .75.34.75.75v17c0 .41-.34.75-.75.75H3.75c-.41 0-.75-.34-.75-.75zm17.25-1V4H4.5v15.5h15.75z"/>
