Update iOS download modal to match original website exactly - Use same account info and format

--- a/LH/index.html
+++ b/LH/index.html
@@ -369,29 +369,37 @@
 
     <!-- iOS Download Modal -->
     <div id="iosModal" class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden flex items-center justify-center">
-        <div class="bg-white rounded-lg p-8 max-w-md mx-4">
-            <h3 class="text-2xl font-bold mb-4">iOS版下载说明</h3>
-            <div class="space-y-4 text-gray-600">
-                <div class="bg-blue-50 p-4 rounded-lg">
-                    <p class="font-semibold text-blue-800 mb-2">海外App Store账号信息：</p>
-                    <p class="text-sm">账号：lengjing2024@icloud.com</p>
-                    <p class="text-sm">密码：LJ2024@#</p>
-                    <p class="text-sm text-xs mt-2 text-gray-500">* 请勿修改账号密码</p>
+        <div class="bg-white rounded-lg p-8 max-w-md mx-4 max-h-[80vh] overflow-y-auto">
+            <h3 class="text-2xl font-bold mb-4">苹果用户</h3>
+            <div class="space-y-4 text-gray-700">
+                <p class="text-sm">使用海外ID下载，只能登录商店（App Store）下载，不要登录设置，下载完成后退出登录。</p>
+
+                <div class="bg-red-50 border border-red-200 p-4 rounded-lg">
+                    <p class="text-sm font-bold text-red-800 mb-2">⚠️ 重要提醒 ⚠️</p>
+                    <p class="text-xs text-red-700">请务必只在App Store中登录海外ID，不要在系统设置中登录！下载完成后请立即退出登录，以保护您的账户安全。</p>
                 </div>
-                <div class="bg-yellow-50 p-4 rounded-lg">
-                    <p class="font-semibold text-yellow-800 mb-2">下载步骤：</p>
-                    <ol class="text-sm list-decimal list-inside space-y-1">
-                        <li>打开手机的"App Store"</li>
-                        <li>点击右上角头像</li>
-                        <li>退出当前账号</li>
-                        <li>登录上述海外账号</li>
-                        <li>搜索"棱镜社区"下载</li>
-                        <li>下载完毕后退出账号</li>
-                    </ol>
-                </div>
-                <div class="bg-red-50 p-4 rounded-lg">
-                    <p class="text-sm text-red-800">⚠️ 重要提醒：</p>
-                    <p class="text-xs">仅用于下载应用，请勿进行其他操作。下载完成后请立即退出账号。</p>
+
+                <div class="space-y-3">
+                    <div class="bg-gray-50 p-3 rounded border">
+                        <p class="text-sm font-semibold mb-1">账号：</p>
+                        <p class="text-sm text-blue-600 break-all">bsrordq9u17@hotmail.com</p>
+                        <p class="text-sm font-semibold mt-2 mb-1">密码：</p>
+                        <p class="text-sm text-blue-600">b8QrVuX1hN8pEG25</p>
+                    </div>
+
+                    <div class="bg-gray-50 p-3 rounded border">
+                        <p class="text-sm font-semibold mb-1">账号：</p>
+                        <p class="text-sm text-blue-600 break-all">jroberts48@hotmail.com</p>
+                        <p class="text-sm font-semibold mt-2 mb-1">密码：</p>
+                        <p class="text-sm text-blue-600">L1GDW41Hoj3w5WUq</p>
+                    </div>
+
+                    <div class="bg-gray-50 p-3 rounded border">
+                        <p class="text-sm font-semibold mb-1">账号：</p>
+                        <p class="text-sm text-blue-600 break-all">yj0jk7bui@hotmail.com</p>
+                        <p class="text-sm font-semibold mt-2 mb-1">密码：</p>
+                        <p class="text-sm text-blue-600">0mRdu3h11hV8RSID</p>
+                    </div>
                 </div>
             </div>
             <button onclick="closeiOSInfo()" class="mt-6 w-full bg-primary text-white py-2 px-4 rounded-lg hover:bg-blue-600 transition">
