--- a/LH/index.html
+++ b/LH/index.html
@@ -255,15 +255,49 @@
                     <div>
                         <h3 class="text-2xl font-bold mb-4">APP下载</h3>
                         <p class="mb-4">下载我们的专属APP，享受更便捷的交易体验</p>
-                        <div class="space-y-4">
-                            <button onclick="showiOSInfo()" class="w-full bg-primary text-white py-3 px-6 rounded-lg hover:bg-blue-600 transition">
-                                <div class="flex items-center justify-center">
+                        <div class="space-y-6">
+                            <!-- iOS 下载信息 -->
+                            <div class="bg-gray-50 p-6 rounded-lg border">
+                                <h4 class="text-lg font-bold mb-3 text-primary flex items-center">
                                     <svg class="w-6 h-6 mr-2" fill="currentColor" viewBox="0 0 24 24">
                                         <path d="M17.05 20.28c-.98.95-2.05.8-3.08.35-1.09-.46-2.09-.48-3.24 0-1.44.62-2.2.44-3.06-.35C2.79 15.25 3.51 7.59 9.05 7.31c1.35.07 2.29.74 3.08.8 1.18-.24 2.31-.93 3.57-.84 1.51.12 2.65.72 3.4 1.8-3.12 1.87-2.38 5.98.48 7.13-.57 1.5-1.31 2.99-2.54 4.09l.01-.01zM12.03 7.25c-.15-2.23 1.66-4.07 3.74-4.25.29 2.58-2.34 4.5-3.74 4.25z"/>
                                     </svg>
-                                    iOS 版下载
+                                    苹果用户
+                                </h4>
+                                <div class="space-y-3 text-gray-700">
+                                    <p class="text-sm">使用海外ID下载，只能登录商店（App Store）下载，不要登录设置，下载完成后退出登录。</p>
+
+                                    <div class="bg-red-50 border border-red-200 p-3 rounded">
+                                        <p class="text-sm font-bold text-red-800 mb-1">⚠️ 重要提醒 ⚠️</p>
+                                        <p class="text-xs text-red-700">请务必只在App Store中登录海外ID，不要在系统设置中登录！下载完成后请立即退出登录，以保护您的账户安全。</p>
+                                    </div>
+
+                                    <div class="space-y-2">
+                                        <div class="bg-white p-3 rounded border text-xs">
+                                            <p class="font-semibold mb-1">账号：</p>
+                                            <p class="text-blue-600 break-all">bsrordq9u17@hotmail.com</p>
+                                            <p class="font-semibold mt-2 mb-1">密码：</p>
+                                            <p class="text-blue-600">b8QrVuX1hN8pEG25</p>
+                                        </div>
+
+                                        <div class="bg-white p-3 rounded border text-xs">
+                                            <p class="font-semibold mb-1">账号：</p>
+                                            <p class="text-blue-600 break-all">jroberts48@hotmail.com</p>
+                                            <p class="font-semibold mt-2 mb-1">密码：</p>
+                                            <p class="text-blue-600">L1GDW41Hoj3w5WUq</p>
+                                        </div>
+
+                                        <div class="bg-white p-3 rounded border text-xs">
+                                            <p class="font-semibold mb-1">账号：</p>
+                                            <p class="text-blue-600 break-all">yj0jk7bui@hotmail.com</p>
+                                            <p class="font-semibold mt-2 mb-1">密码：</p>
+                                            <p class="text-blue-600">0mRdu3h11hV8RSID</p>
+                                        </div>
+                                    </div>
                                 </div>
-                            </button>
+                            </div>
+
+                            <!-- Android 下载 -->
                             <a href="https://safew.ftihzjg.com/download_app/com.i0vrm1.jjb71gjo_1.14.2_251109_afbe50e3.apk" download class="w-full bg-green-600 text-white py-3 px-6 rounded-lg hover:bg-green-700 transition inline-block text-center">
                                 <div class="flex items-center justify-center">
                                     <svg class="w-6 h-6 mr-2" fill="currentColor" viewBox="0 0 24 24">
@@ -367,47 +401,6 @@
         </div>
     </footer>
 
-    <!-- iOS Download Modal -->
-    <div id="iosModal" class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden flex items-center justify-center">
-        <div class="bg-white rounded-lg p-8 max-w-md mx-4 max-h-[80vh] overflow-y-auto">
-            <h3 class="text-2xl font-bold mb-4">苹果用户</h3>
-            <div class="space-y-4 text-gray-700">
-                <p class="text-sm">使用海外ID下载，只能登录商店（App Store）下载，不要登录设置，下载完成后退出登录。</p>
-
-                <div class="bg-red-50 border border-red-200 p-4 rounded-lg">
-                    <p class="text-sm font-bold text-red-800 mb-2">⚠️ 重要提醒 ⚠️</p>
-                    <p class="text-xs text-red-700">请务必只在App Store中登录海外ID，不要在系统设置中登录！下载完成后请立即退出登录，以保护您的账户安全。</p>
-                </div>
-
-                <div class="space-y-3">
-                    <div class="bg-gray-50 p-3 rounded border">
-                        <p class="text-sm font-semibold mb-1">账号：</p>
-                        <p class="text-sm text-blue-600 break-all">bsrordq9u17@hotmail.com</p>
-                        <p class="text-sm font-semibold mt-2 mb-1">密码：</p>
-                        <p class="text-sm text-blue-600">b8QrVuX1hN8pEG25</p>
-                    </div>
-
-                    <div class="bg-gray-50 p-3 rounded border">
-                        <p class="text-sm font-semibold mb-1">账号：</p>
-                        <p class="text-sm text-blue-600 break-all">jroberts48@hotmail.com</p>
-                        <p class="text-sm font-semibold mt-2 mb-1">密码：</p>
-                        <p class="text-sm text-blue-600">L1GDW41Hoj3w5WUq</p>
-                    </div>
-
-                    <div class="bg-gray-50 p-3 rounded border">
-                        <p class="text-sm font-semibold mb-1">账号：</p>
-                        <p class="text-sm text-blue-600 break-all">yj0jk7bui@hotmail.com</p>
-                        <p class="text-sm font-semibold mt-2 mb-1">密码：</p>
-                        <p class="text-sm text-blue-600">0mRdu3h11hV8RSID</p>
-                    </div>
-                </div>
-            </div>
-            <button onclick="closeiOSInfo()" class="mt-6 w-full bg-primary text-white py-2 px-4 rounded-lg hover:bg-blue-600 transition">
-                知道了
-            </button>
-        </div>
-    </div>
-
     <script>
         // Mobile menu toggle
         document.getElementById('mobileMenuBtn').addEventListener('click', function() {
@@ -441,24 +434,6 @@
                 nav.classList.add('shadow-xl');
             } else {
                 nav.classList.remove('shadow-xl');
-            }
-        });
-
-        // iOS download info modal
-        function showiOSInfo() {
-            document.getElementById('iosModal').classList.remove('hidden');
-            document.body.style.overflow = 'hidden';
-        }
-
-        function closeiOSInfo() {
-            document.getElementById('iosModal').classList.add('hidden');
-            document.body.style.overflow = 'auto';
-        }
-
-        // Close modal when clicking outside
-        document.getElementById('iosModal').addEventListener('click', function(e) {
-            if (e.target === this) {
-                closeiOSInfo();
             }
         });
     </script>
