Update all LH branding to 棱镜社区 throughout the website

--- a/LH/index.html
+++ b/LH/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LH - 高胜率策略交流社区</title>
+    <title>棱镜社区 - 高胜率策略交流社区</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -37,7 +37,7 @@
         <div class="container mx-auto px-4">
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
-                    <h1 class="text-2xl font-bold text-primary">LH</h1>
+                    <h1 class="text-2xl font-bold text-primary">棱镜社区</h1>
                 </div>
                 <div class="hidden md:flex space-x-8">
                     <a href="#home" class="text-gray-700 hover:text-primary transition">首页</a>
@@ -360,7 +360,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold mb-4">LH</h3>
+                    <h3 class="text-2xl font-bold mb-4">棱镜社区</h3>
                     <p class="text-gray-400">专业的高胜率策略交易社区</p>
                 </div>
                 <div>
@@ -396,7 +396,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-800 mt-8 pt-8 text-center">
-                <p class="text-gray-400">© 2024 LH. All rights reserved.</p>
+                <p class="text-gray-400">© 2024 棱镜社区. All rights reserved.</p>
             </div>
         </div>
     </footer>
