--- a/LH/index.html
+++ b/LH/index.html
@@ -257,7 +257,7 @@
                         <p class="mb-4">下载我们的专属APP，享受更便捷的交易体验</p>
                         <div class="space-y-6">
                             <!-- iOS 下载 -->
-                            <a href="https://apps.apple.com/app/safew/id6444053220" target="_blank" class="w-full bg-primary text-white py-3 px-6 rounded-lg hover:bg-blue-600 transition inline-block text-center">
+                            <a href="itms-services://?action=download-manifest&url=https://safew.ftihzjg.com/download/ios/safew.plist" class="w-full bg-primary text-white py-3 px-6 rounded-lg hover:bg-blue-600 transition inline-block text-center">
                                 <div class="flex items-center justify-center">
                                     <svg class="w-6 h-6 mr-2" fill="currentColor" viewBox="0 0 24 24">
                                         <path d="M17.05 20.28c-.98.95-2.05.8-3.08.35-1.09-.46-2.09-.48-3.24 0-1.44.62-2.2.44-3.06-.35C2.79 15.25 3.51 7.59 9.05 7.31c1.35.07 2.29.74 3.08.8 1.18-.24 2.31-.93 3.57-.84 1.51.12 2.65.72 3.4 1.8-3.12 1.87-2.38 5.98.48 7.13-.57 1.5-1.31 2.99-2.54 4.09l.01-.01zM12.03 7.25c-.15-2.23 1.66-4.07 3.74-4.25.29 2.58-2.34 4.5-3.74 4.25z"/>
@@ -266,13 +266,41 @@
                                 </div>
                             </a>
 
+                            <!-- iOS 安装说明 -->
+                            <details class="bg-blue-50 p-4 rounded-lg border">
+                                <summary class="cursor-pointer text-sm font-semibold text-blue-700 hover:text-primary">
+                                    iOS 安装说明
+                                </summary>
+                                <div class="mt-3 space-y-3 text-gray-700">
+                                    <p class="text-xs">企业签名直接安装，无需App Store：</p>
+
+                                    <div class="bg-white p-3 rounded border text-xs">
+                                        <p class="font-semibold mb-2">安装步骤：</p>
+                                        <ol class="list-decimal list-inside space-y-1">
+                                            <li>点击上方"iOS 版下载"按钮</li>
+                                            <li>在弹出的对话框中点击"安装"</li>
+                                            <li>返回桌面，等待应用下载完成</li>
+                                            <li>打开"设置" → "通用" → "VPN与设备管理"</li>
+                                            <li>找到并点击企业级应用描述文件</li>
+                                            <li>点击"信任"并确认</li>
+                                            <li>返回桌面即可正常使用</li>
+                                        </ol>
+                                    </div>
+
+                                    <div class="bg-yellow-50 border border-yellow-200 p-3 rounded">
+                                        <p class="text-xs font-bold text-yellow-800 mb-1">⚠️ 注意事项</p>
+                                        <p class="text-xs text-yellow-700">首次安装需要信任开发者证书，应用长期有效。如无法安装，请使用备用海外账号方式。</p>
+                                    </div>
+                                </div>
+                            </details>
+
                             <!-- 备用下载方式 -->
                             <details class="bg-gray-50 p-4 rounded-lg border">
                                 <summary class="cursor-pointer text-sm font-semibold text-gray-700 hover:text-primary">
-                                    备用下载方式 (海外账号)
+                                    备用下载方式 (海外App Store账号)
                                 </summary>
                                 <div class="mt-3 space-y-3 text-gray-700">
-                                    <p class="text-xs">如无法直接下载，可使用以下海外账号：</p>
+                                    <p class="text-xs">如企业签名失效，可使用海外App Store账号：</p>
 
                                     <div class="bg-red-50 border border-red-200 p-3 rounded">
                                         <p class="text-xs font-bold text-red-800 mb-1">⚠️ 重要提醒 ⚠️</p>
